--- a/Code/Tamagotchi.Presentation/Client.Mobile/app/build.gradle
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.akexorcist:RoundCornerProgressBar:2.0.3'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
