--- a/Code/Tamagotchi.Presentation/Client.Mobile/build.gradle
+++ b/Code/Tamagotchi.Presentation/Client.Mobile/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.squareup.retrofit2:retrofit:2.4.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
