--- a/Code/Tamagotchi.Presentation/Client.Desktop/pom.xml
+++ b/Code/Tamagotchi.Presentation/Client.Desktop/pom.xml
@@ -10,6 +10,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.apache.axis2</groupId>
+            <artifactId>axis2-xmlbeans</artifactId>
+            <version>1.7.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.cloudinary</groupId>
             <artifactId>cloudinary-http44</artifactId>
             <version>RELEASE</version>
